syntax = "proto3";

option java_package = "com.github.netty.core.rpc.codec";
option java_outer_classname = "RpcProto";
option optimize_for = SPEED;

message Request {
    int64 requestId=1;
    string serviceName=2;
    string methodName=3;
    bytes data=4;
}

message Response {
    int64 requestId=1;
    int32 status=2;
    string message=3;
    int32 encode=4;
    bytes data=5;
}